# saylesss88.github.io

./: 404.html  Comparing_Flakes_and_Traditional_Nix.html  Comparing_Flakes_and_Traditional_Nix_7.html  Comparing_Flakes_and_Traditional_Nix_8.html  Comparing_Flakes_to_Traditional_Nix_7.html  Debugging_and_Tracing_Modules_8.html  Debugging_and_Tracing_NixOS_Modules.html  Debugging_and_Tracing_NixOS_Modules_8.html  Debugging_and_Tracing_NixOS_Modules_9.html  Getting_Started_with_Nix_1.html  Getting_Started_with_Nix_Lang_1.html  Intro_to_Nix_Derivations.html  Intro_to_Nix_Derivations_6.html  Intro_to_Nix_Derivations_7.html  LICENSE  Local_Nixpkgs_9.html  NixOS_Modules_Explained.html  NixOS_Modules_Explained_3.html  Nix_Flakes_Explained.html  Nix_Flakes_Explained_4.html  Nix_Pull_Requests.html  Nix_Pull_Requests_10.html  Nix_Pull_Requests_11.html  Package_Definitions_Explained.html  Package_Definitions_Explained_6.html  Package_Definitions_Explained_7.html  README.md  Understanding_Nix_Functions.html  Understanding_Nix_Functions_2.html  Understanding_Top-Level_Attributes.html  Understanding_Top-Level_Attributes_5.html  Working_with_Nixpkgs_Locally.html  Working_with_Nixpkgs_Locally_10.html  Working_with_Nixpkgs_Locally_9.html  atom.xml  atom2.xml  atom3.xml  book-44b7be09.js  book.js  book.toml  (+69 more)
assets/: catppuccin-mocha.css  dracula.css  tokyo-night.css
blog/: index.html  robots.txt  rss.xml  search.js  search_index.en.json  sitemap.xml
book/: Comparing_Flakes_and_Traditional_Nix_8.html  toc.html  (+12 more)
nix-repl-backend/: Cargo.toml  Dockerfile
nix-repl-backend/src/: main.rs
(+344 files in other folders)
