[package]
name = "nix-repl-server"
version = "0.1.1"
edition = "2024"

[dependencies]
axum = "0.8.6"
axum-core = "0.5.5"
tokio = {version = "1", features = ["full"]}
tower = "0.5"
tower-http = {version = "0.6", features = ["cors", "limit"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
anyhow = "1"
